# bot_ludwig

./: Cargo.toml  Dockerfile  LICENSE  README.md  answers.yaml  compose.yaml  perms.yaml  perms2.yaml  soundboard.json
src/: cmds.rs  handler.rs  main.rs  math.rs  music.rs  perms.rs  reddit.rs  sound.rs  soundboard.json  soundboard.rs  spotify.rs  user.rs
