[package]
name = "bot_ludwig"
version = "0.1.0"
authors = ["romptroll <romptroll@hotmail.com>"]
edition = "2018"


[dependencies]
yaml-rust = "0.4.4"
random = "0.12.2"
reqwest = "*"
serde_json = "*"
songbird = { version = "0.2.1", features = ["builtin-queue"]}
rspotify = "0.11.3"


[dependencies.tokio]
version = "*"
features = ["macros", "rt-multi-thread"]


[dependencies.serenity]
default-features = false
features = [
    "builder",
    "client",
    "cache",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend",
    "standard_framework",
    "voice",
]
version = "0.10"

