[package]
name = "bot_ludwig"
version = "0.1.0"
authors = ["romptroll <romptroll@hotmail.com>"]
edition = "2018"


[dependencies]
yaml-rust = "0.4.4"
random = "*"
reqwest = "*"
serde_json = "*"
songbird = { version = "*", features = ["builtin-queue"]}
rspotify = "*"
#lib-rddit-v3 = { git = "https://git.lgjt.xyz/Johannes/lib-rddit.git" }
poise = "0.4.1"


[dependencies.tokio]
version = "*"
features = ["macros", "rt-multi-thread"]


[dependencies.serenity]
default-features = false
features = [
    "builder",
    "client",
    "cache",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend",
    #"standard_framework",
    "voice",
]
version = "*"

